llama/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-serve
  labels:
    app: llama-serve
spec:
  type: ClusterIP
  selector:
    app: llama-serve
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
